Generic Controller interface - URI generator